--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "series-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --collect-coverage",
@@ -21,18 +20,28 @@
     "express-validation": "^3.0.8",
     "faker": "^5.5.3",
     "fishery": "^2.0.0",
-    "jest": "^27.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "msw": "^0.35.0",
-    "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3"
-  }
+    "eslint-plugin-import": "^2.25.3",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FranMedic/W07-Series-Api-Alvaro-Franny.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FranMedic/W07-Series-Api-Alvaro-Franny/issues"
+  },
+  "homepage": "https://github.com/FranMedic/W07-Series-Api-Alvaro-Franny#readme",
+  "description": ""
 }
