--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "faker": "^5.5.3",
     "fishery": "^2.0.0",
     "joi": "^17.4.2",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
