--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bson-objectid": "^2.0.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
